crates/ruff_python_parser/tests/snapshots/invalid_syntax@duplicate_match_class_attr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/duplicate_match_class_attr.py
---
## AST

```
Module(
    ModModule {
        range: 0..71,
        body: [
            Match(
                StmtMatch {
                    range: 0..70,
                    subject: Name(
                        ExprName {
                            range: 6..7,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 13..38,
                            pattern: MatchClass(
                                PatternMatchClass {
                                    range: 18..33,
                                    cls: Name(
                                        ExprName {
                                            range: 18..23,
                                            id: Name("Class"),
                                            ctx: Load,
                                        },
                                    ),
                                    arguments: PatternArguments {
                                        range: 23..33,
                                        patterns: [],
                                        keywords: [
                                            PatternKeyword {
                                                range: 24..27,
                                                attr: Identifier {
                                                    id: Name("x"),
                                                    range: 24..25,
                                                },
                                                pattern: MatchValue(
                                                    PatternMatchValue {
                                                        range: 26..27,
                                                        value: NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 26..27,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                            PatternKeyword {
                                                range: 29..32,
                                                attr: Identifier {
                                                    id: Name("x"),
                                                    range: 29..30,
                                                },
                                                pattern: MatchValue(
                                                    PatternMatchValue {
                                                        range: 31..32,
                                                        value: NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 31..32,
                                                                value: Int(
                                                                    2,
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        range: 35..38,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                range: 35..38,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 43..70,
                            pattern: MatchSequence(
                                PatternMatchSequence {
                                    range: 48..65,
                                    patterns: [
                                        MatchClass(
                                            PatternMatchClass {
                                                range: 49..64,
                                                cls: Name(
                                                    ExprName {
                                                        range: 49..54,
                                                        id: Name("Class"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                arguments: PatternArguments {
                                                    range: 54..64,
                                                    patterns: [],
                                                    keywords: [
                                                        PatternKeyword {
                                                            range: 55..58,
                                                            attr: Identifier {
                                                                id: Name("x"),
                                                                range: 55..56,
                                                            },
                                                            pattern: MatchValue(
                                                                PatternMatchValue {
                                                                    range: 57..58,
                                                                    value: NumberLiteral(
                                                                        ExprNumberLiteral {
                                                                            range: 57..58,
                                                                            value: Int(
                                                                                1,
                                                                            ),
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                        },
                                                        PatternKeyword {
                                                            range: 60..63,
                                                            attr: Identifier {
                                                                id: Name("x"),
                                                                range: 60..61,
                                                            },
                                                            pattern: MatchValue(
                                                                PatternMatchValue {
                                                                    range: 62..63,
                                                                    value: NumberLiteral(
                                                                        ExprNumberLiteral {
                                                                            range: 62..63,
                                                                            value: Int(
                                                                                2,
                                                                            ),
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                        },
                                                    ],
                                                },
                                            },
                                        ),
                                    ],
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        range: 67..70,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                range: 67..70,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | match x:
2 |     case Class(x=1, x=2): ...
  |                     ^ Syntax Error: attribute name `x` repeated in class pattern
3 |     case [Class(x=1, x=2)]: ...
  |


  |
1 | match x:
2 |     case Class(x=1, x=2): ...
3 |     case [Class(x=1, x=2)]: ...
  |                      ^ Syntax Error: attribute name `x` repeated in class pattern
  |
